--- a/index.html
+++ b/index.html
@@ -543,14 +543,14 @@
 					var getip, getcc, getcn, getrc, getrn, getct, getzc, gettz, getlt, getlg, getmc, coordx, coordy;
 
 					$.ajax({
-						url: "https://freegeoip.net/json/",
+						url: "http://ip-api.com/json",
 						dataType: "json",
 						success: function(data) {
 							var welcomeMsg = "<div id='vstr'>";
                                                         var d = data;
                                                         var s = screen;
-							coordx = parseInt((-0.1 * data.latitude) + 11);
-							coordy = parseInt((0.222 * data.longitude) + 39);
+							coordx = parseInt((-0.1 * d.lat) + 11);
+							coordy = parseInt((0.222 * d.lon) + 39);
 							worldmap[coordx][coordy] = "<b id='xmark'>X</b>";
 
 							for (i = 0; i <= 18; i++) {
@@ -559,16 +559,17 @@
 										welcomeMsg += worldmap[i][j];
 									} 
 								switch (true) {
-									case i == 3 : ipInfo = "IP Address: "   + d.ip                                        ; break;
-									case i == 4 : ipInfo = "City: "         + d.city                                      ; break;
-									case i == 5 : ipInfo = "State/Region: " + d.country_name + " (" + d.region_code + ")" ; break;
-									case i == 6 : ipInfo = "Zip Code: "     + d.zip_code                                  ; break;
-									case i == 7 : ipInfo = "Country: "      + d.country_code                              ; break;
-									case i == 8 : ipInfo = "Lat/Long: "     + d.latitude + ", " + d.longitude             ; break;
-									case i == 9 : ipInfo = "Time Zone: "    + d.time_zone                                 ; break;
-									case i == 10: ipInfo = "Metro Code: "   + d.metro_code                                ; break;
-									case i == 11: ipInfo = "Display: "      + s.width + "x" + s.height                    ; break;
-									case i == 12: ipInfo = "Platform: "     + navigator.platform                          ; break;
+									case i == 3 : ipInfo = "IP Address: "   + d.query                           ; break;
+									case i == 4 : ipInfo = "Organization: " + d.org				    ; break;
+									case i == 5 : ipInfo = "ISP: "		+ d.isp				    ; break;
+									case i == 6 : ipInfo = "City: "         + d.city                            ; break;
+									case i == 7 : ipInfo = "State/Region: " + d.country + " (" + d.region + ")" ; break;
+									case i == 8 : ipInfo = "Zip Code: "     + d.zip                             ; break;
+									case i == 9 : ipInfo = "Country: "      + d.countryCode                     ; break;
+									case i == 10: ipInfo = "Lat/Long: "     + d.lat + ", " + d.lon              ; break;
+									case i == 11: ipInfo = "Time Zone: "    + d.timezone                        ; break;
+									case i == 12: ipInfo = "Display: "      + s.width + "x" + s.height          ; break;
+									case i == 13: ipInfo = "Platform: "     + navigator.platform                ; break;
 								}
 								welcomeMsg += ipInfo + "<br/>";
 							}
