--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
 					var getip, getcc, getcn, getrc, getrn, getct, getzc, gettz, getlt, getlg, getmc, coordx, coordy;
 
 					$.ajax({
-						url: "http://ip-api.com/json",
+						url: "ip-api.com/json",
 						dataType: "json",
 						success: function(data) {
 							var welcomeMsg = "<div id='vstr'>";
