--- a/index.html
+++ b/index.html
@@ -559,8 +559,8 @@
 										welcomeMsg += worldmap[i][j];
 									} 
 								switch (true) {
-									case i == 3 : ipInfo = "IP Address: "   + d.ip                                  ; break;
-									case i == 4 : ipInfo = "Organization: " + d.org				        ; break;
+									case i == 3 : ipInfo = "IP: "   + d.ip                                  ; break;
+									case i == 4 : ipInfo = "Org: " + d.org				        ; break;
 									case i == 5 : ipInfo = "ASN: "		+ d.asn				        ; break;
 									case i == 6 : ipInfo = "City: "         + d.city                                ; break;
 									case i == 7 : ipInfo = "State/Region: " + d.region + " (" + d.region_code + ")" ; break;
