--- a/index.html
+++ b/index.html
@@ -294,20 +294,19 @@
 				function home() {
 					clear();
 
-					var mwbody = "<span>I am a masters student of economics at the University of South Florida. When "
-                                                   + "time allows, I write about politics, economics, international relations, and technology "
-                                                   + "for my blog on Medium. As I move ahead with my academic and professional endeavors, I hope "
-                                                   + "to apply my knowledge of economics and technology to further our understanding of money "
-                                                   + "laundering, sanctions, bribery, and corruption. In 2013, I received an Honorable Discharge "
+					var mwbody = "<span>"
+						   + "I am a graduate student at the Master of Science in Business Analytics and Information "
+						   + "Systems at the University of South Florida. I'm passionate about technology, current affairs "
+						   + "and topics in anti-money laundering. In 2013, I received an Honorable Discharge "
                                                    + "from the United States Marine Corps after nine years of service.</span>";
 					var smbody = "<b>Social Media:</b><br/>"
-                                                   + "<a href='https://medium.com/thoughts-on-political-progress' target='_blank'>Medium</a>, "
-                                                   + "<a href='https://twitter.com/FrankRCastillo' target='_blank'>Twitter</a>, "
                                                    + "<a href='https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g' target='_blank'>YouTube</a>, "
                                                    + "<a href='https://github.com/FrankRCastillo' target='_blank'>GitHub</a>, "
                                                    + "<a href='https://www.linkedin.com/in/franklinrcastillo/' target='_blank'>LinkedIn</a>"
 					var prbody = "<b id='nametitle'>Frank R. Castillo:</b><div id='para'>" + mwbody + "<br/><br/>" + smbody + "</div>";
-					var fwbody = "<div id='TwitterRss'></div><div id='MediumRss'></div><div id='YouTubeRss'></div>";
+					var fwbody = "<div id='TwitterRss'></div>"
+						   + "<div id='MediumRss'></div>"
+						   + "<div id='YouTubeRss'></div>";
 					var mnbody = prbody + fwbody;
 
 					prln(true, mnbody);
