--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 		<meta charset="utf-8" name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=349"/>
 		<title>Frank R. Castillo</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+        <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
+        <script src="/datamaps.world.min.js"></script>
 	</head>
     <body>
         <script src="js/page.js"></script>
