--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
     <body>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/datamaps/0.5.9/datamaps.world.hires.min.js"></script>
         <script src="js/page.js"></script>
     </body>
 </html>
