--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/datamaps/0.5.9/datamaps.world.hires.min.js"></script>
-        <script src="js/page.js"></script>
+        <script src="/js/datamaps.world.hires.min.js"></script>
+        <script src="/js/page.js"></script>
     </body>
 </html>
