--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" type="text/css" href="js/leaflet/leaflet.css">
 	</head>
     <body>
-        <script src="js/leaflet/leaflet.js"></script>
+        <script src="js/leaflet/leaflet-src.js"></script>
         <script src="js/page.js"></script>
     </body>
 </html>
