--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" type="text/css" href="js/leaflet/leaflet.css">
         <script src="js/leaflet/leaflet-src.js"></script>
         <script src="js/codegrid/codegrid.js"></script>
+        <script src="js/pdf.js"></script>
 	</head>
     <body>
         <script src="js/page.js"></script>
