--- a/pages/home.html
+++ b/pages/home.html
@@ -3,11 +3,11 @@
 </h2>
 
 <p>
-  Researcher and educator with a focus on modeling and simulation, anti-money laundering systems, and agent-based models. I teach at St. Petersburg College and am currently completing my PhD in Modeling and Simulation at the University of Central Florida under Prof. Vishnu Prabhu.
+  I'm a researcher and educator focused on modeling and simulation, anti-money laundering systems, and macroeconomic agent-based models. I teach at St. Petersburg College and am currently completing my PhD in Modeling and Simulation at the University of Central Florida under Prof. Vishnu Prabhu.
 </p>
 
 <p>
-  My academic background includes economics, international business, and analytics. Before this career, I served in the U.S. Marine Corps from 2004 to 2013.
+  Prior to my time in academia, I worked for serveral financial institutions and other organizations, primarily in fintech and compliance. Prior to that, I served in the U.S. Marine Corps from 2004 to 2013.
 </p>
 
 <p>
@@ -17,6 +17,7 @@
 <ul>
   <li>Email: franklin.r.castillo.3 [at] gmail.com</li>
   <li><a href="https://www.linkedin.com/in/franklinrcastillo" target="_blank">LinkedIn</a></li>
-  <li><a href="https://github.com/FrankRCastillo" target="_blank">GitHub</a></li>
+  <li><a href="https://github.com/FrankRCastillo"             target="_blank">GitHub</a></li>
+  <li><a href="https://www.youtube.com/@frankcastillo2855"    target="_blank">YouTube</a></li>
 </ul>
 
