--- a/pages/projects.html
+++ b/pages/projects.html
@@ -3,7 +3,7 @@
 
 <ul>
   <li>
-    <strong>RSSCAT</strong> – A terminal-based RSS reader that displays feeds using ANSI hyperlinks. <a href="https://github.com/FrankRCastillo/rsscat" target="_blank">View on GitHub</a>
+    <strong><a href="https://github.com/FrankRCastillo/rsscat" target="_blank">RSSCAT</a></strong> - A terminal-based RSS reader that displays feeds using ANSI hyperlinks. 
   </li>
 </ul>
 
