--- a/pages/projects.html
+++ b/pages/projects.html
@@ -3,6 +3,8 @@
 <ul>
   <li>
     <strong><a href="https://github.com/FrankRCastillo/rsscat" target="_blank">RSSCAT</a></strong> - A terminal-based RSS reader that displays feeds using ANSI hyperlinks. 
+    <strong><a href="https://github.com/FrankRCastillo/cold"   target="_blank">CoLD</a></strong> - Command Line Downloader for web-based resources.
+    <strong><a href="https://github.com/FrankRCastillo/zotero-books-to-sections" target="_blank">Zotero Books to Sections</a></strong> - Zotero plugin for splitting books into book sections.
   </li>
 </ul>
 
