--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,14 +1,2 @@
 <h2>Projects</h2>
-
-<ul>
-  <li>
-    <strong><a href="https://github.com/FrankRCastillo/rsscat" target="_blank">RSSCAT</a></strong> - A terminal-based RSS reader that displays feeds using ANSI hyperlinks. 
-  </li>
-  <li>
-    <strong><a href="https://github.com/FrankRCastillo/cold"   target="_blank">CoLD</a></strong> - Command Line Downloader for web-based resources.
-  </li>
-  <li>
-    <strong><a href="https://github.com/FrankRCastillo/zotero-books-to-sections" target="_blank">Zotero Books to Sections</a></strong> - Zotero plugin for splitting books into book sections.
-  </li>
-</ul>
-
+<div id="projectList">Loading projects...</div>
