updated main reference

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <p>&copy; 2025 Frank R. Castillo</p>
         </footer>
 
-        <script src="js/main.js"></script>
+        <script type="module" src="js/main.js"></script>
     </body>
 </html>
 
