changed terminal output height

--- a/pages/cmd.html
+++ b/pages/cmd.html
@@ -1,5 +1,5 @@
 <div id="terminal" style="background: #000000; color: #ffa500; padding: 1em; font-family: monospace;">
-  <div id="terminal-output" style="min-height: 200px;"></div>
+  <div id="terminal-output"></div>
   <div>
     <span style="color: #0f0;">$</span>
     <input
