updated prompt formatting

--- a/pages/cmd.html
+++ b/pages/cmd.html
@@ -1,7 +1,7 @@
 <div id="terminal" style="background: #000000; color: #ffa500; padding: 1em; font-family: monospace;">
   <div id="terminal-output"></div>
   <div>
-    <span style="color: #ffa500;">$</span>
+    <span id="terminal-prompt" style="color: #ffa500;"></span>
     <input
       id="terminal-input"
       type="text"
