--- a/pages/cmd.html
+++ b/pages/cmd.html
@@ -8,7 +8,7 @@
       autofocus
       autocomplete="off"
       spellcheck="false"
-      style="background: #000000; color: #ffa500; border: none; outline: none; width: 90%; font-family: monospace;"
+      style="background: #000000; color: #ffa500; border: none; outline: none; flex: 1; font-family: monospace;"
     />
   </div>
 </div>
