updated styles for input width

--- a/pages/cmd.html
+++ b/pages/cmd.html
@@ -1,14 +1,12 @@
-<div id="terminal" style="background: #000000; color: #ffa500; padding: 1em; font-family: monospace;">
+<div id="terminal">
   <div id="terminal-output"></div>
   <div>
-    <span id="terminal-prompt" style="color: #ffa500;"></span>
-    <input
-      id="terminal-input"
-      type="text"
-      autofocus
-      autocomplete="off"
-      spellcheck="false"
-      style="background: #000000; color: #ffa500; border: none; outline: none; flex: 1; font-family: monospace;"
+    <span id="terminal-prompt" ></span>
+    <input id="terminal-input"
+           type="text"
+           autofocus
+           autocomplete="off"
+           spellcheck="false"
     />
   </div>
 </div>
