--- a/pages/cmd.html
+++ b/pages/cmd.html
@@ -1,6 +1,6 @@
 <div id="terminal">
   <div id="terminal-output"></div>
-  <div>
+  <div id="terminal-prompt-group">
     <span id="terminal-prompt" ></span>
     <input id="terminal-input"
            type="text"
