updated prompt layout

--- a/pages/cmd.html
+++ b/pages/cmd.html
@@ -1,13 +1,19 @@
 <div id="terminal">
   <div id="terminal-output"></div>
-  <div id="terminal-prompt-group">
-    <span id="terminal-prompt" ></span>
-    <input id="terminal-input"
-           type="text"
-           autofocus
-           autocomplete="off"
-           spellcheck="false"
-    />
-  </div>
+  <table id="terminal-prompt-group">
+    <tr>
+      <td>
+        <span id="terminal-prompt" ></span> 
+      </td>
+      <td>
+        <input id="terminal-input"
+              type="text"
+              autofocus
+              autocomplete="off"
+              spellcheck="false"
+        />
+      </td>
+    </tr>
+  </table>
 </div>
 
