updated prompt layout

--- a/pages/cmd.html
+++ b/pages/cmd.html
@@ -1,11 +1,11 @@
 <div id="terminal">
   <div id="terminal-output"></div>
-  <table id="terminal-prompt-group">
-    <tr>
-      <td>
-        <span id="terminal-prompt" ></span> 
+  <table id="terminal-prompt-table">
+    <tr id="terminal-prompt-row">
+      <td id="terminal-prompt-cell">
+        <span id="terminal-prompt"></span> 
       </td>
-      <td>
+      <td id="terminal-input-cell">
         <input id="terminal-input"
               type="text"
               autofocus
