--- a/pages/cmd.html
+++ b/pages/cmd.html
@@ -1,6 +1,10 @@
 <div id="terminal">
-  <div id="terminal-output"></div>
   <table id="terminal-prompt-table">
+    <tr>
+      <td colspan="2">
+        <div id="terminal-output"></div>
+      </td>
+    </tr>
     <tr id="terminal-prompt-row">
       <td id="terminal-prompt-cell">
         <span id="terminal-prompt"></span> 
