updated input formatting

--- a/pages/cmd.html
+++ b/pages/cmd.html
@@ -13,6 +13,7 @@
         <input id="terminal-input"
                type="text"
                autofocus
+               autocapitalize="off"
                autocomplete="off"
                spellcheck="false"
         />
